--- a/_include/windows/reuse_windows_booting_OS.adoc
+++ b/_include/windows/reuse_windows_booting_OS.adoc
@@ -1,2 +1,2 @@
 
-You can boot the operating system by using a local or SAN boot. For a local boot, you install the OS on the local hard disk (SSD, SATA, RAID, and so on). If you opt to use a SAN boot, it must be supported by your configuration.
+There are two options for booting the operating system, a local boot or SAN boot. For a local boot, you install the operating system on the local hard disk (SSD, SATA, RAID, and so on). If you opt to use a SAN boot, your configuration must support SAN booting.
