--- a/hu_sles_15SP2.adoc
+++ b/hu_sles_15SP2.adoc
@@ -37,7 +37,7 @@ include::_include/hu/reuse_hu_san_booting_steps.adoc[]
 
 For SUSE Linux Enterprise Server 15 SP2 the /etc/multipath.conf file must exist, but you do not need to make specific changes to the file. SUSE Linux Enterprise Server 15 SP2 is compiled with all settings required to recognize and correctly manage ONTAP LUNs. Use the `+multipath -ll+` command verify the settings for your ONTAP LUNs.
 
-There should be two groups of paths with different priorities. The paths with higher priorities are Active/Optimized, meaning they are serviced by the controller where the aggregate is located. The paths with lower priorities are active but are non-optimized because they are served from a different controller. The non-optimized paths are only used when optimized paths are not available.
+There should be two groups of paths with different priorities. The paths with higher priorities are Active/Optimized, which means they are serviced by the controller where the aggregate is located. The paths with lower priorities are active but non-optimized because they are served from a different controller. The non-optimized paths are only used when optimized paths are not available.
 
 .Example
 The following example displays the correct output for an ONTAP LUN with two Active/Optimized paths and two Active/Non-Optimized paths.
