--- a/hu_wuhu_72.adoc
+++ b/hu_wuhu_72.adoc
@@ -4,7 +4,6 @@ permalink: hu_wuhu_72.html
 keywords: wuhu, 7.2, host utilities, SAN, windows, unified
 summary: Windows Unified host utilities includes an installation program that sets the required Windows registry and HBA parameters so that the Windows host correctly handles the storage system behaviors for NetApp ONTAP and E-Series platforms.
 ---
-
 = Install Windows Unified Host Utilities 7.2
 :hardbreaks:
 :nofooter:
@@ -18,6 +17,7 @@ The Windows Unified Host Utilities (WUHU) enable you to connect a Windows host c
 
 The Windows Unified Host Utilities supports the following versions of Windows:
 
+* Windows 2025
 * Windows 2022
 * Windows 2019
 * Windows 2016
@@ -58,7 +58,7 @@ Before you install the host utilities, you must verify that the host utilities v
 . Check the hotfixes required for the respective host in the link:https://docs.netapp.com/us-en/ontap-sanhost/index.html[SAN host Windows documentation].
 +
 [NOTE]
-The link:https://docs.netapp.com/us-en/ontap-sanhost/hu_windows_2022.html[Using Windows server 2022 with ONTAP] document provides instructions on link:https://docs.netapp.com/us-en/ontap-sanhost/hu_windows_2022.html#installing-windows-hotfixes[installing Windows hotfixes] for Windows server 2022. Refer to the  Windows documents in the host configurations category to find the relevant hotfix information for earlier versions of Windows server.
+The link:https://docs.netapp.com/us-en/ontap-sanhost/hu_windows_2022.html[Use Windows server 2022 with ONTAP] document provides instructions on link:https://docs.netapp.com/us-en/ontap-sanhost/hu_windows_2022.html#installing-windows-hotfixes[installing Windows hotfixes] for Windows server 2022. Refer to the  Windows documents in the host configurations category to find the relevant hotfix information for earlier versions of Windows server.
 
 . Add the iSCSI, FCP, or NVMe-oF license and start the target service.
 +
