--- a/_include/windows/reuse_windows_san_booting.adoc
+++ b/_include/windows/reuse_windows_san_booting.adoc
@@ -1,10 +1,12 @@
+Boot your host operating system using a SAN boot.
+
 .Before you begin
-Verify that your configuration supports by SAN booting. Use the link:https://imt.netapp.com/matrix/#welcome[NetApp Interoperability Matrix Tool^] to check the support for your OS, HBA, HBA firmware and the HBA boot BIOS, and ONTAP version.
+Use the link:https://imt.netapp.com/matrix/#welcome[NetApp Interoperability Matrix Tool^] to confirm that your configuration fully supports SAN booting. The operating system, HBA, HBA firmware, HBA boot BIOS, and ONTAP version should be supported.
 
 .Steps
 . Map the SAN boot LUN to the host.
 . Verify that multiple paths are available. 
 +
-NOTE: Multiple paths only become available after the host OS is up and running on the paths.
+NOTE: Multiple paths only become available after the host operating system is up and running on the paths.
 . Enable SAN booting in the server BIOS for the ports to which the SAN boot LUN is mapped. For information on how to enable the HBA BIOS, see your vendor-specific documentation.
-. Reboot the host to verify the boot is successful.
+. Reboot the host to verify the boot was successful.
