--- a/hu_windows_2016.adoc
+++ b/hu_windows_2016.adoc
@@ -4,8 +4,7 @@ permalink: hu_windows_2016.html
 keywords: windows, enterprise
 summary: Using Windows Server 2016 with ONTAP
 ---
-
-= Using Windows Server 2016 with ONTAP
+= Use Windows Server 2016 with ONTAP
 :hardbreaks:
 :toclevels: 1
 :nofooter:
