--- a/hu_windows_2012r2.adoc
+++ b/hu_windows_2012r2.adoc
@@ -4,8 +4,7 @@ permalink: hu_windows_2012r2.html
 keywords: windows, enterprise
 summary: Using Windows Server 2012 R2 with ONTAP
 ---
-
-= Using Windows Server 2012 R2 with ONTAP
+= Use Windows Server 2012 R2 with ONTAP
 :hardbreaks:
 :toclevels: 1
 :nofooter:
