--- a/hu_windows_2025.adoc
+++ b/hu_windows_2025.adoc
@@ -18,7 +18,7 @@ You can use the ONTAP SAN host configuration settings to configure Windows Serve
 == Boot the operating system
 include::_include/windows/reuse_windows_booting_OS.adoc[]
 
-=== SAN booting
+=== Use SAN booting
 include::_include/windows/reuse_windows_san_booting.adoc[]
 
 
