--- a/_include/windows/reuse_windows_recommended_settings.adoc
+++ b/_include/windows/reuse_windows_recommended_settings.adoc
@@ -1,4 +1,4 @@
-On systems using FC, the Host Utilities installer sets the required timeout values for Emulex and QLogic FC HBAs when MPIO is selected. For more information on recommended settings, see the link:https://docs.netapp.com/us-en/ontap-sanhost/hu_wuhu_71_rn.html[Windows Unified Host Utilities documentation] and select the installation procedure for your WUHU version.
+On systems using FC, the Host Utilities installer sets the required timeout values for Emulex and QLogic FC HBAs when MPIO is selected.
 
 [role="tabbed-block"]
 ====
@@ -28,4 +28,4 @@ For QLogic FC HBAs, the installer sets the following parameters:
 --
 ====
 
-
+For more information on recommended settings, see the link:https://docs.netapp.com/us-en/ontap-sanhost/hu_wuhu_71_rn.html[Windows Unified Host Utilities documentation] and select the installation procedure for your WUHU version.
