--- a/nvme_sles15_sp6.adoc
+++ b/nvme_sles15_sp6.adoc
@@ -903,8 +903,12 @@ DHHC-
 
 TLS provides secure end-to-end encryption for NVMe connections between NVMe-oF hosts and an ONTAP array. Beginning with ONTAP 9.16.1, you can configure Transport Layer Security (TLS) 1.3 using the CLI and a configured pre-shared key (PSK). 
 
+.About this task
+You perform the steps in this procedure on the SUSE Linux Enterprise Server 15 SP6 host, except where it speicifes that you perform a step on the ONTAP controller.
+
+
 .Steps
-. Check that you have the following ktls-utils, openssl, and libopenssl packages installed on the SUSE Linux Enterprise Server 15 SP6 host: 
+. Check that you have the following ktls-utils, openssl, and libopenssl packages installed on the host: 
 
 .. `rpm -qa | grep ktls`
 +
@@ -993,7 +997,7 @@ nqn.2014-08.org.nvmexpress:uuid:e58eca24-faff-11ea-8fee-3a68dd3b5c5f
 NVMeTLSkey-1:01:dNcby017axByCko8GivzOO9zGlgHDXJCN6KLzvYoA+NpT1uD:
 ----
 
-. Add the TLS PSK to the ONTAP subsystem:
+. On the ONTAP controller, add the TLS PSK to the ONTAP subsystem:
 +
 ----
 nvme subsystem host add -vserver sles15_tls -subsystem sles15 -host-nqn nqn.2014-08.org.nvmexpress:uuid:ffa0c815-e28b-4bb1-8d4c-7c6d5e610bfc -tls-configured-psk NVMeTLSkey-1:01:dNcby017axByCko8GivzOO9zGlgHDXJCN6KLzvYoA+NpT1uD:
