--- a/hu_wuhu_71.adoc
+++ b/hu_wuhu_71.adoc
@@ -102,7 +102,7 @@ For Hyper-V guests, raw (pass-through) disks do not appear in the guest OS if yo
 
 
 
-You can install the host utilities interactively or using the command line. The new Host Utilities installation package must be in a path that is accessible by the Windows host. Follow the instructions for installing the Host Utilities interactively or from the Windows command line.
+You can install the host utilities interactively or using the command line. The new Host Utilities installation package must be in a path that is accessible by the Windows host. 
 
 [role="tabbed-block"]
 ====
