--- a/nvme_sles15_sp6.adoc
+++ b/nvme_sles15_sp6.adoc
@@ -244,7 +244,9 @@ Created symlink /etc/systemd/system/default.target.wants/nvmf- autoconnect.servi
 
 .. `systemctl status nvmf-autoconnect.service`
 +
-.Example output
+.Show example output
+[%collapsible]
+====
 ----
 nvmf-autoconnect.service - Connect NVMe-oF subsystems automatically during boot
 Loaded: loaded (/usr/lib/systemd/system/nvmf-autoconnect.service; enabled; vendor preset: disabled)
@@ -260,10 +262,13 @@ nvme[2114]: traddr=nn-0x201700a098fd4ca6:pn-0x201800a098fd4ca6 is already connec
 systemd[1]: nvmf-autoconnect.service: Deactivated successfully. systemd[1]: Finished Connect NVMe-oF subsystems automatically during
 boot.
 ----
+====
 
 .. `systemctl status nvmefc-boot-connections.service`
 +
-.Example output
+.Show example output
+[%collapsible]
+====
 ----
 nvmefc-boot-connections.service - Auto-connect to subsystems on FC-NVME devices found during boot
 Loaded: loaded (/usr/lib/systemd/system/nvmefc-boot- connections.service; enabled; vendor preset: enabled)
@@ -273,6 +278,7 @@ systemd[1]: Starting Auto-connect to subsystems on FC-NVME devices found during 
 systemd[1]: nvmefc-boot-connections.service: Succeeded.
 systemd[1]: Finished Auto-connect to subsystems on FC-NVME devices found during boot.
 ----
+====
 
 == Configure NVMe/TCP
 
