--- a/nvme_sles15_sp5.adoc
+++ b/nvme_sles15_sp5.adoc
@@ -221,7 +221,7 @@ Created symlink /etc/systemd/system/default.target.wants/nvmf- autoconnect.servi
 ----
 
 . Reboot the host. 
-. Verify that `nvmf-autoconnect.service` and `nvmefc-boot-connections.service` are running after the system boots up: 
+. Verify that `nvmf-autoconnect.service` and `nvmefc-boot-connections.service` are running after the system boot: 
 +
 *Example output:*
 +
